--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 
 services:
-  app: 
+  app:
     build:
       context: .
     command: sh -c "python manage.py runserver 0.0.0.0:8000"
@@ -9,3 +9,5 @@ services:
       - ./app:/app
     ports:
       - 8000:8000
+    environment:
+      - DJANGO_DEBUG=1
